update maintenance page

--- a/cloudfront-dist/assets/maintenance/index.html
+++ b/cloudfront-dist/assets/maintenance/index.html
@@ -3,7 +3,7 @@
         font-family: Basis,Helvetica Neue,Helvetica,Arial,sans-serif;
         font-size: 16px;
         line-height: 20px;
-        color: #6d6d6d;
+        color: #575756;
     }
     .logo {
         text-align: center;
@@ -20,19 +20,21 @@
     }
     .message {
         margin-top: 30px;
+        text-align: center;
         margin-bottom: 30px;
     }
     .link {
-        color: #0d8092;
+        color:  #009bd6;
         text-decoration: none;
     }
 </style>
 <div class="container">
     <div class="logo">
-        <img src="https://s3-eu-west-1.amazonaws.com/com.diabeloop.public-assets/img/logo.png" alt="YourLoops" height="45"/>
+        <img src="https://s3-eu-west-1.amazonaws.com/com.diabeloop.public-assets/img/patient_room.png" alt="YourLoops" height="190"/>
     </div>
     <div class="message">
-        YourLoops is down for maintenance. <br>
+      <div>YourLoops is down for maintenance. </div>
+      <br>
         Visit our
         <a class="link" href="https://yourloops.statuspage.io">
             status page
@@ -40,10 +42,11 @@
     </div>
     <hr>
     <div class="message">
-        YourLoops est en cours de maintenance. <br>
+        <div>YourLoops est en cours de maintenance. </div>
+        <br>
         Vous pouvez consulter notre
         <a class="link" href="https://yourloops.statuspage.io">
-            page de status
+            page de statut
         </a> (en anglais) pour savoir quand l&apos;application sera de nouveau disponible.
     </div>
 </div>
