enhance message (provide by our PO)

--- a/cloudfront-dist/assets/maintenance/index.html
+++ b/cloudfront-dist/assets/maintenance/index.html
@@ -7,7 +7,7 @@
     }
     .logo {
         text-align: center;
-        margin-bottom: 60px;
+        margin-bottom: 30px;
     }
     .container {
         width: 580px;
@@ -15,7 +15,7 @@
         padding-right: 40px;
         margin-right: auto;
         margin-left: auto;
-        margin-top: 50vh;
+        margin-top: 40vh;
         transform: translateY(-50%);
     }
     .message {
@@ -33,16 +33,20 @@
         <img src="https://s3-eu-west-1.amazonaws.com/com.diabeloop.public-assets/img/patient_room.png" alt="YourLoops" height="190"/>
     </div>
     <div class="message">
-      <div>YourLoops is down for maintenance. </div>
-      <br>
+        <div>We'll be back soon! YourLoops is currently undergoing maintenance. </div>
+        Thank you for your patience.
+        <br>
+        <br>
         Visit our
         <a class="link" href="https://yourloops.statuspage.io">
-            status page
+              status page
         </a> to know when the application will be back and running.
     </div>
     <hr>
     <div class="message">
-        <div>YourLoops est en cours de maintenance. </div>
+        <div>Nous serons bientot de retour ! YourLoops est actuellement en maintenance.</div>
+        Merci de votre patience.
+        <br>
         <br>
         Vous pouvez consulter notre
         <a class="link" href="https://yourloops.statuspage.io">
