--- a/cloudfront-dist/assets/maintenance/index.html
+++ b/cloudfront-dist/assets/maintenance/index.html
@@ -3,11 +3,11 @@
         font-family: Basis,Helvetica Neue,Helvetica,Arial,sans-serif;
         font-size: 16px;
         line-height: 20px;
-        color: #6d6d6d;
+        color: #575756;
     }
     .logo {
         text-align: center;
-        margin-bottom: 60px;
+        margin-bottom: 30px;
     }
     .container {
         width: 580px;
@@ -15,35 +15,42 @@
         padding-right: 40px;
         margin-right: auto;
         margin-left: auto;
-        margin-top: 50vh;
+        margin-top: 40vh;
         transform: translateY(-50%);
     }
     .message {
         margin-top: 30px;
+        text-align: center;
         margin-bottom: 30px;
     }
     .link {
-        color: #0d8092;
+        color:  #009bd6;
         text-decoration: none;
     }
 </style>
 <div class="container">
     <div class="logo">
-        <img src="https://s3-eu-west-1.amazonaws.com/com.diabeloop.public-assets/img/logo.png" alt="YourLoops" height="45"/>
+        <img src="https://s3-eu-west-1.amazonaws.com/com.diabeloop.public-assets/img/patient_room.png" alt="YourLoops" height="190"/>
     </div>
     <div class="message">
-        YourLoops is down for maintenance. <br>
+        <div>We'll be back soon! YourLoops is currently undergoing maintenance. </div>
+        Thank you for your patience.
+        <br>
+        <br>
         Visit our
         <a class="link" href="https://yourloops.statuspage.io">
-            status page
+              status page
         </a> to know when the application will be back and running.
     </div>
     <hr>
     <div class="message">
-        YourLoops est en cours de maintenance. <br>
+        <div>Nous serons bientot de retour ! YourLoops est actuellement en maintenance.</div>
+        Merci de votre patience.
+        <br>
+        <br>
         Vous pouvez consulter notre
         <a class="link" href="https://yourloops.statuspage.io">
-            page de status
+            page de statut
         </a> (en anglais) pour savoir quand l&apos;application sera de nouveau disponible.
     </div>
 </div>
